[package]
name = "analytic"
version = "0.7.1"
authors = ["Aaron"]
edition = "2018"
license = "Apache-2.0"
description = "The analytic crate has been renamed to be the math crate https://crates.io/crates/math"
repository = "https://github.com/Rustinante/analytic"

[dependencies]
log = "0.4.8"
num = "0.2"
rand = "0.7.0"
rayon = "1.1.0"
